# model/activity.go
@@ -6,6 +6,7 @@ type ActivityType string
 
 const (
 	ActivityTypeRoomCreated          ActivityType = "room_created"
+	ActivityTypePaymentCreated       ActivityType = "payment_created"
 	ActivityTypePaymentAmountChanged ActivityType = "payment_amount_changed"
 	ActivityTypePaymentPaidChanged   ActivityType = "payment_paid_changed"
 	ActivityTypeRollCallCreated      ActivityType = "roll_call_created"
@@ -16,6 +17,6 @@ type Activity struct {
 	gorm.Model
 	Type        ActivityType `gorm:"size:50;not null;index"`
 	CampID      uint         `gorm:"not null"`
-	UserID      *string      // payment_*_changed のみ使用
+	UserID      *string      // payment_* のみ使用
 	ReferenceID uint         `gorm:"not null"` // RoomID / PaymentID / RollCallID / QuestionGroupID
 }
